Changed License to MIT

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: swipe_widget
 description: Widget to swipe to the sides, adding different funcionalities.
-version: 0.0.2
+version: 0.0.2+1
 homepage: https://github.com/DrafaKiller/SwipeWidget
 
 environment:
